--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .heading {
     color: #DB2F32; 
     text-align: center;
-    font-size: 100px;
-    font-family: bd-supper;
+    font-size: 75px;
+    font-family: 'bd-supper', sans-serif;
 }
