--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .heading {
     color: #DB2F32; 
     text-align: center;
+    font-size: 70px;
     font-family: bd-supper, sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -13,3 +14,11 @@
     font-weight: 400;
     font-style: normal;
 }
+
+.italic-name  {
+    color:black
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
