--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+<style>
+  @import url("https://use.typekit.net/eft2qeb.css");
+</style>
+
 .heading {
     color: #DB2F32; 
     text-align: center;
