--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     color: #DB2F32; 
     text-align: center;
     font-size: 70px;
-    font-family: bd-supper, sans-serif;
+    font-family: "bd-supper", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -14,14 +14,14 @@
 .name { 
     color:black;
     font-size: 18px;
-    font-family: adobe-caslon-pro, serif;
+    font-family: "adobe-caslon-pro", serif;
     font-weight: 400;
     font-style: normal;
 }
 
 .italic-name  {
     color:black
-    font-family: adobe-caslon-pro, serif;
+    font-family: "adobe-caslon-pro", serif;
     font-weight: 400;
     font-style: italic;
 }
