--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
     font-family: "adobe-caslon-pro", serif;
     font-weight: 400;
     font-style: normal;
+    position:relative;
+    left: 500px;
+    top: 100px;
 }
 
 .italic-name  {
