--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@
     font-weight: 400;
     font-style: normal;
     position:relative;
-    left: 500px;
-    top: 100px;
+    left: 1000px;
+    bottom: 50px;
 }
 
 .italic-name  {
