--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
     font-family: adobe-caslon-pro, serif;
     font-weight: 400;
     font-style: normal;
+    margin: 2rem;
 }
 
 .italic-heading2 {
@@ -46,3 +47,4 @@
     font-weight: 400;
     font-style: italic;
 }
+
