--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
 #background {
     background-color: #FFFAFA;
     border-top: 0.5px solid black;
+    position: relative;
+    bottom: 50px;
 }
 
 #heading2 {
@@ -37,7 +39,7 @@
     font-family: adobe-caslon-pro, serif;
     font-weight: 400;
     font-style: normal;
-    margin: 5rem;
+    margin: 10rem;
 }
 
 .italic-heading2 {
