--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     font-weight: 400;
     font-style: normal;
     position:relative;
-    left: 800px;
+    left: 900px;
     bottom: 50px;
 }
 
@@ -40,6 +40,8 @@
     font-weight: 400;
     font-style: normal;
     margin: 10rem;
+    position: relative;
+    bottom: 50px;
 }
 
 .italic-heading2 {
