--- a/style.css
+++ b/style.css
@@ -60,3 +60,16 @@
     display: inline-block;
     vertical-align: center;
 }
+
+.bodytext {
+    color: black;
+    font-size: 20px;
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: normal; 
+    margin: 10rem;
+}
+
+.fit-picture {
+    width: 300px;
+}
