--- a/style.css
+++ b/style.css
@@ -52,15 +52,6 @@
     font-style: italic;
 }
 
-.parent-1 { 
-    text-align: center;
-}
-
-.child-1 {
-    display: inline-block;
-    vertical-align: center;
-}
-
 .bodytext {
     color: black;
     font-size: 20px;
@@ -72,4 +63,5 @@
 
 .fit-picture {
     width: 300px;
-text-align: left;}
+text-align: left;
+margin: 10rem;}
