--- a/style-02.css
+++ b/style-02.css
@@ -1,4 +1,4 @@
-body {
+body { 
     background-color: rgba(100, 149, 237, 0.15);
 }
 
@@ -7,3 +7,49 @@ body {
     width: 80vw;
 }
 
+.page-title {
+    font-family: bd-supper, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: cornflowerblue;
+    margin-top: 75px;
+    font-size: 120px;
+    width: 400px;
+    line-height: 80%;
+    letter-spacing: -7px;
+
+}
+
+.body-text {
+    color: black;
+    font-size: 20px;   
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: normal; 
+}
+
+
+span {
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.section-01 {
+float: left;
+}
+
+.section-02 {
+    color: black;
+    font-size: 20px;   
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: normal; 
+    margin-left: 400px;
+    float: right;
+    margin-top: 75px;
+}
+
+.clearfix {
+    overflow: auto;
+}
