fixed last paragraph floating to right of image. cleafix hack.

--- a/entry-02/style-02.css
+++ b/entry-02/style-02.css
@@ -88,3 +88,9 @@ float: left;
 a:link { color: cornflowerblue;}
 a:visited { color: blue;}
 a:hover { color: fuchsia; }
+
+div:after {
+    clear:both;
+    content: '';
+    display: block;
+}
