--- a/entry-03/style-03.css
+++ b/entry-03/style-03.css
@@ -56,6 +56,11 @@ span {
     background-color: #25E721;
     flex: 1;
     padding: 2em;
+    border-radius: 0.5em;
+    border-style: solid;
+    border-width: 0.1em;
+    border-color: #1B9519;
+
 }
 
 .radium-text {
