lead square css

--- a/entry-03/style-03.css
+++ b/entry-03/style-03.css
@@ -73,3 +73,14 @@ span {
     display: flex;
 }
 
+.lead-square {
+    width: 15em;
+    height: 30em;
+    background-color: white;
+    flex: 1.25;
+    padding: 2em;
+    border-radius: 0.5em;
+    border-style: solid;
+    border-width: 0.1em;
+    border-color: #CACBCA;
+}
