mobile media query and bg color

--- a/entry-04/style-04.css
+++ b/entry-04/style-04.css
@@ -1,10 +1,13 @@
 :root {
     --font-size: 16px;
     --spacing: 20px;
+    --bg-color: #eeeee4; 
 }
 
 @media (min-width: 300px) {
     body {
+@media (min-width: 400px) {
+    p {
         font-size: 20px;
         background-color: #D9EBB5;
     }
