--- a/entry-04/style-04.css
+++ b/entry-04/style-04.css
@@ -11,7 +11,7 @@
 }
 
 
-/* fonts */
+/* FONTS */
 
 @font-face {
     font-family: "Karrik-Regular";
@@ -27,6 +27,7 @@
 
 
 /* content */
+/* CONTENT/ STRUCTURE */
 
 body {
     font-size: var(--font-size);
