--- a/entry-04/style-04.css
+++ b/entry-04/style-04.css
@@ -37,3 +37,10 @@ p {
     font-family: "Karrik-Regular";
 }
 
+.header {
+    width: 100vw;
+    height: 2em;
+    background-color: #E8E8DD;
+    border-bottom: 0.5em solid black;
+}
+
