--- a/entry-04/style-04.css
+++ b/entry-04/style-04.css
@@ -44,3 +44,10 @@ p {
     border-bottom: 0.5em solid black;
 }
 
+.header-text {
+    font-family: "Avara-Italic";
+    color: #FC010A;
+    font-size: 20px;
+    text-align: center;
+}
+
