--- a/entry-04/style-04.css
+++ b/entry-04/style-04.css
@@ -10,6 +10,11 @@
     p {
         font-size: 20px;
     }
+
+    body {
+        margin: 0 auto;
+        width: 90vw;    
+    }
 }
 
 
@@ -33,18 +38,20 @@
 body {
     font-size: var(--font-size);
     background-color: var(--bg-color);
-    max-width: 65ch;
+    margin: 0 auto;
+    width: 90vw;    
+
 }
 
 p {
     font-family: "Karrik-Regular";
-    padding: 2em 0 2em 0;
+    margin: 2em auto 2em auto;
 }
 
 /* CLASSES */
 
 .collection {
-    width: 100vw;
+    width: 100%;
     height: 2em;
     background-color: #E8E8DD;
     border-bottom: 0.05em solid black;
@@ -58,12 +65,9 @@ p {
     font-size: 20px;
     text-align: center;
     padding-top: 0.25em;
+    margin: 0%;
 }
 
-.body {
-    margin: 2em auto 0 auto;
-    width: 90vw;
-}
 
 .circle {
     background: var(--pink);
@@ -73,7 +77,11 @@ p {
     margin-top: 2em;
 }
 
-
+.blue-frame {
+    width: 25em;
+    border: 0.6em solid var(--blue);
+    border-radius: 0.5em;
+}
 
 
 
