--- a/entry-05/style-05.css
+++ b/entry-05/style-05.css
@@ -8,3 +8,19 @@
     --lime: #C6DD09; 
     
 }
+/* FONTS */
+
+@font-face {
+    font-family: "Karrik-Regular";
+    src: url(../fonts/Karrik-Regular.otf) format('opentype');
+        
+}
+
+@font-face {
+    font-family: "Avara-Italic";
+    src: url(../fonts/Avara-BoldItalic.otf) format('opentype');
+        
+}
+
+
+
