padding for sections

--- a/entry-05/style-05.css
+++ b/entry-05/style-05.css
@@ -35,6 +35,14 @@
 
 /* STRUCTURE + CONTENT */
 
+
+section:not(:first-child) 
+    { padding: var(--spacing);}
+
+
+/* aside, section, nav, footer, header */
+
+
 /* TREATMENTS */
 
 h1 { font-size: calc(var(--font-size) * 2); }
