--- a/entry-05/style-05.css
+++ b/entry-05/style-05.css
@@ -51,5 +51,11 @@ section:nth-child(4) { background-color: var(--orange); }
 
 /* TREATMENTS */
 
-h1 { font-size: calc(var(--font-size) * 2); }
+h1 { 
+    font-size: calc(var(--font-size) * 1.5);
+    font-family: 'Avara-Italic';
+    text-align: center;
+    padding: var(--spacing);
+ }
+
 
