--- a/entry-05/style-05.css
+++ b/entry-05/style-05.css
@@ -51,12 +51,10 @@ section:nth-child(6) { background-color: var(--orange); }
 
 /* TREATMENTS */
 
-h1 { 
-    font-size: calc(var(--font-size) * 1.5);
+h1 { font-size: calc(var(--font-size) * 1.5);
     font-family: 'Avara-Italic';
     text-align: center;
-    padding: var(--spacing);
- }
+    padding: var(--spacing); }
 
  p { font-family: 'Karrik-Regular'; }
 
