--- a/entry-05/style-05.css
+++ b/entry-05/style-05.css
@@ -29,8 +29,10 @@
 
 
 
-/* STRUCTURE + CONTENT */
 
+
+/* STRUCTURE + CONTENT */
+/* aside, section, nav, footer, header */
 
 body { background-color: var(--off-white); }
 
