--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,9 @@
     --fuchsia: #E25BC1;
     --purple: #CE96C9; }
 
+
+@font-face {
+        font-family: "Cardinal-Photo-Medium-Italic";
+        src: url(../fonts/cardinalphoto-mediumitalic-TRIAL.otf) format('opentype'); }
+
+
