--- a/styles/style.css
+++ b/styles/style.css
@@ -21,3 +21,13 @@
 
 
 
+/* MEDIA QUERIES */ 
+
+@media (min-width: 395px)
+{ 
+    main {
+        display:flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
