--- a/styles/style.css
+++ b/styles/style.css
@@ -31,3 +31,21 @@
         flex-wrap: wrap;
     }
 }
+
+
+
+
+
+
+/* SET UP */
+
+nav {
+    width: 100%;
+    height: 90px;
+}
+
+main { 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
