--- a/styles/style.css
+++ b/styles/style.css
@@ -25,15 +25,18 @@
 
 @media (min-width: 750px)
 { 
+
     main {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 475px);
+    grid-template-rows: 475px 475px;
+    grid-auto-flow: row;
     }
 
     div { 
-        min-width: 390px;
-        
+        max-width: 475px;
+        max-height: 475px;
+
     }
 }
 
@@ -49,19 +52,15 @@ body {
 }
 
 nav {
-    width: 100%;
     height: 60px;
     border-bottom: var(--black) 1px solid;
 }
 
 main { 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+
 }
 
 div { 
-    width: 100vw;
     min-height: 390px; 
     border: var(--black) solid 1px;
 }
