--- a/styles/style.css
+++ b/styles/style.css
@@ -28,15 +28,18 @@
 
     main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, 475px);
+    grid-template-columns: repeat(3, 475px);
     grid-template-rows: 475px 475px;
     grid-auto-flow: row;
     }
 
-    div { 
-        max-width: 475px;
-        max-height: 475px;
+    a {
+     max-width: 475px;
+    max-height: 475px;
+    }
 
+    div { 
+    
     }
 }
 
@@ -61,9 +64,33 @@ main {
 }
 
 div { 
-    min-height: 390px; 
-    border: var(--black) solid 1px;
+
+
 }
+
+
+p {
+    font-family: 'Karrik-Regular';
+    font-size: 25px;
+    padding-bottom: 1em;
+    padding-left: 1em;
+
+}
+
+a {
+    display: block;
+    min-height: 390px; 
+    /* border: var(--black) solid 1px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+
+
+
+/* CLASSES */
+
 
 .entry01 {
     background-color: var(--red);
