--- a/entry-01/style-01.css
+++ b/entry-01/style-01.css
@@ -16,7 +16,7 @@
     font-style: normal;
     position: relative;
     left: 900px;
-    bottom: 50px;
+    top: -10px;
 }
 
 .italic-name  {
@@ -30,7 +30,7 @@
     background-color: #FFFAFA;
     border-top: 0.5px solid black;
     position: relative;
-    bottom: 50px;
+    top: 1em;
 }
 
 #heading2 {
