--- a/entry-01/style-01.css
+++ b/entry-01/style-01.css
@@ -76,6 +76,9 @@
     left:350px;
 }
 
-.foot {
-    background-color: #FFFAFA; 
+
+.nav { 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
