--- a/entry-04/style-04.css
+++ b/entry-04/style-04.css
@@ -83,6 +83,11 @@ p {
     border-radius: 0.5em;
 }
 
-
+.nav  {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 3em;
+}
 
 /* FIN */ 
